--- a/config/essentials_discord_config.yml
+++ b/config/essentials_discord_config.yml
@@ -12,7 +12,7 @@
 
 # The token for your bot from the Discord Developers site.
 # Please make sure to use this site to add the bot to your server as it grants special permissions you may not be familiar with: https://essentialsx.net/discord.html
-token: "OTI3NTczNDYwMzMzNTEwNjc2.YdMMGg.nBsRCUa3O6k7VvmT4gPklSmfChQ"
+token: OTI3NTczNDYwMzMzNTEwNjc2.YdMMGg.24PvnWkVKpFmLeUe-0D-TX3Dyt8
 
 # The ID of your server.
 guild: 695261950870814790
