--- a/config/essentials_discord_config.yml
+++ b/config/essentials_discord_config.yml
@@ -12,10 +12,10 @@
 
 # The token for your bot from the Discord Developers site.
 # Please make sure to use this site to add the bot to your server as it grants special permissions you may not be familiar with: https://essentialsx.net/discord.html
-token: OTI3NTczNDYwMzMzNTEwNjc2.YdMMGg.24PvnWkVKpFmLeUe-0D-TX3Dyt8
+token: ${DISCORD_TOKEN}
 
 # The ID of your server.
-guild: 695261950870814790
+guild: ${DISCORD_GUILD}
 
 # The Discord invite URL that will be shown when a player when using the /discord command or in other areas.
 discord-url: "https://discord.gg/invite-code"
@@ -38,7 +38,7 @@ discord-url: "https://discord.gg/invite-code"
 # - staff, which will send kick/mute messages
 # (note: you will need to replace the zeros with the actual channel ID you want to use)
 channels:
-  primary: 697150393141952643
+  primary: ${DISCORD_PRIMARY}
   staff: 000000000000000000
 
 # Should all players receive Discord messages from the primary channel, regardless of their permissions?
@@ -76,7 +76,7 @@ console:
   # The channel ID (or webhook URL) to send the console output to.
   # If the channel ID/webhook URL is invalid or set to 'none', the console relay will be disabled.
   # Note: If you use a channel ID, the bot must have the "Manage Webhooks" permission in Discord or else the console relay will not work.
-  channel: 927576432572510238
+  channel: ${DISCORD_CONSOLE_CHANNEL}
   # The format of the console message. The following placeholders can be used:
   # - {timestamp}: Timestamp in HH:mm:ss format
   # - {level}: The console logging level
