--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
       TYPE: "PAPER"
       MEMORY: "8G"
       MOTD: "Welcome to ourcraft server!"
-      ICON: "https://cdna.artstation.com/p/assets/images/images/037/831/198/large/mark-galbraith-minecraftbee.jpg?1621433748"
+      OVERRIDE_ICON: "true"
+      ICON: "https://cdna.artstation.com/p/assets/images/images/037/831/198/large/mark-galbraith-minecraftbee.jpg"
       DIFFICULTY: "normal"
       MODE: "survival"
       FORCE_GAMEMODE: "true"
