--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,21 +16,21 @@ services:
       TYPE: "PAPER"
       MEMORY: "8G"
       MOTD: "Welcome to ourcraft server!"
-      OVERRIDE_ICON: "true"
+      OVERRIDE_ICON: "TRUE"
       ICON: "https://cdna.artstation.com/p/assets/images/images/037/831/198/large/mark-galbraith-minecraftbee.jpg"
       DIFFICULTY: "normal"
       MODE: "survival"
-      FORCE_GAMEMODE: "true"
+      FORCE_GAMEMODE: "TRUE"
       MAX_PLAYERS: "15"
       PLAYER_IDLE_TIMEOUT: "30"
-      ANNOUNCE_PLAYER_ACHIEVEMENTS: "true"
+      ANNOUNCE_PLAYER_ACHIEVEMENTS: "TRUE"
       WHITELIST: "frannyg_,LeynaM"
-      ENFORCE_WHITELIST: "true"
+      ENFORCE_WHITELIST: "TRUE"
       OPS: "frannyg_"
       SPAWN_PROTECTION: "0"
-      REPLACE_ENV_VARIABLES: "true"
-      REPLACE_ENV_IN_PLACE: "true"
-      REPLACE_ENV_DURING_SYNC: "true"
+      REPLACE_ENV_VARIABLES: "TRUE"
+      REPLACE_ENV_IN_PLACE: "TRUE"
+      REPLACE_ENV_DURING_SYNC: "TRUE"
       ENV_VARIABLE_PREFIX: "DISCORD_"
       DISCORD_TOKEN: "${DISCORD_TOKEN}"
       DISCORD_GUILD: "${DISCORD_GUILD}"
@@ -38,9 +38,9 @@ services:
       DISCORD_PRIMARY: "${DISCORD_PRIMARY}"
       DISCORD_CONSOLE_CHANNEL: "${DISCORD_CONSOLE_CHANNEL}"
       RESOURCE_PACK: "https://drive.google.com/uc?export=download&id=1RX449QtQBKLjoCLl3dw0puUF98hIOQzl"
-      RESOURCE_PACK_ENFORCE: "true"
-      REMOVE_OLD_MODS: "true"
-      REMOVE_OLD_DATAPACKS: "true"
+      RESOURCE_PACK_ENFORCE: "TRUE"
+      REMOVE_OLD_MODS: "TRUE"
+      REMOVE_OLD_DATAPACKS: "TRUE"
       DATAPACKS: "/datapacks/terralith-v2.0.9.zip,
         /datapacks/vanilla_tweaks_crafting.zip,
         /datapacks/afk_display-v1.1.2.zip,
@@ -52,7 +52,10 @@ services:
         /datapacks/more_mob_heads-v2.9.4.zip,
         /datapacks/player_head_drops-v1.1.2.zip,
         /datapacks/villager_death_messages-v1.2.3.zip"
-      ENABLE_RCON: "true"
+      ENABLE_RCON: "TRUE"
       RCON_PORT: "25575"
       RCON_PASSWORD: "${RCON_PASSWORD}"
+      MAX_TICK_TIME: "-1"
+      ENABLE_AUTOPAUSE: "TRUE"
+      OVERRIDE_SERVER_PROPERTIES: "TRUE"
     restart: always
