--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       MOTD: "Welcome to ourcraft server!"
       OVERRIDE_ICON: "TRUE"
       ICON: "https://cdna.artstation.com/p/assets/images/images/037/831/198/large/mark-galbraith-minecraftbee.jpg"
+      OVERRIDE_SERVER_PROPERTIES: "TRUE"
       DIFFICULTY: "normal"
       MODE: "survival"
       FORCE_GAMEMODE: "TRUE"
@@ -55,5 +56,8 @@ services:
       ENABLE_RCON: "TRUE"
       RCON_PORT: "25575"
       RCON_PASSWORD: "${RCON_PASSWORD}"
-      OVERRIDE_SERVER_PROPERTIES: "TRUE"
+      MAX_TICK_TIME: "-1"
+      ENABLE_AUTOPAUSE: "TRUE"
+      AUTOPAUSE_TIMEOUT_EST: "900"
+      AUTOPAUSE_TIMEOUT_INIT: "300"
     restart: always
