fixed paper version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       SERVER_NAME: "Ourcraft"
       EULA: "TRUE"
       TYPE: "PAPER"
+      PAPER_DOWNLOAD_URL: "https://drive.google.com/uc?export=download&id=1QmKLkrK9ilHBVsnBWbP54gnpaKiYU815"
       MEMORY: "8G"
       MOTD: "Welcome to ourcraft server!"
       OVERRIDE_ICON: "TRUE"
@@ -28,7 +29,7 @@ services:
       MAX_PLAYERS: "15"
       PLAYER_IDLE_TIMEOUT: "30"
       ANNOUNCE_PLAYER_ACHIEVEMENTS: "TRUE"
-      WHITELIST: "frannyg_,LeynaM,Jack_Pear"
+      WHITELIST: "frannyg_,LeynaM,Jack_Pear,TiaWM"
       ENFORCE_WHITELIST: "TRUE"
       OPS: "frannyg_"
       SPAWN_PROTECTION: "0"
@@ -58,7 +59,4 @@ services:
       RCON_PORT: "25575"
       RCON_PASSWORD: "${RCON_PASSWORD}"
       MAX_TICK_TIME: "-1"
-      ENABLE_AUTOPAUSE: "TRUE"
-      AUTOPAUSE_TIMEOUT_EST: "900"
-      AUTOPAUSE_TIMEOUT_INIT: "300"
     restart: always
